# liquifier

./: Anchor.toml  liquifier.json  one_o_one.json
programs/liquifier/: Cargo.toml
programs/liquifier/src/: error.rs  lib.rs
programs/liquifier/src/instructions/: create_liquifier.rs  deliquify.rs  liquify.rs  mod.rs  turnon_liquifier.rs
programs/liquifier/src/state/: liquifier.rs  mod.rs
programs/one_o_one/: Cargo.toml
programs/one_o_one/src/: lib.rs
programs/one_o_one/src/instructions/: create_registry.rs  mod.rs
targetC/: .rustc_info.json
targetC/release/.fingerprint/ahash-9c7c0baf4c4baad9/: build-script-build-script-build  build-script-build-script-build.json
targetC/release/.fingerprint/aho-corasick-514947736459a2e2/: lib-aho_corasick  lib-aho_corasick.json
targetC/release/.fingerprint/anchor-attribute-access-control-a913f167aefe6b68/: lib-anchor-attribute-access-control  lib-anchor-attribute-access-control.json
targetC/release/.fingerprint/anchor-attribute-account-a3a74d64880b3e2a/: lib-anchor-attribute-account  lib-anchor-attribute-account.json
targetC/release/.fingerprint/anchor-attribute-constant-e4d263fce2459415/: lib-anchor-attribute-constant  lib-anchor-attribute-constant.json
targetC/release/.fingerprint/anchor-attribute-error-70a4c4114a52be0d/: lib-anchor-attribute-error  lib-anchor-attribute-error.json
targetC/release/.fingerprint/anchor-attribute-event-d8053fb4148f6ff3/: lib-anchor-attribute-event  lib-anchor-attribute-event.json
targetC/release/.fingerprint/anchor-syn-bc8584785da68f4d/: lib-anchor-syn  (+1 more)
tests/: liquifier.ts
(+295 files in other folders)
